@@ -1,3 +1,9 @@
+2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* generic/tclNamesp.c:
+	* tests/info.test:  [Bug 545325 ] info level didn't report
+	namespace eval, bug report by Richard Suchenwirth.
+
 2002-04-18  Don Porter  <dgp@users.sourceforge.net>
 
 	* doc/subst.n:  Clarified documentation on handling unusual return
